[project]
name = "pydedup"
version = "0.1.0"
description = "A CLI tool to deduplicate photos by content hash."
authors = [
    { name = "Jonathan Dickinsopn", email = "jon.dickinson17@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "imagehash>=4.3.2",
    "pillow>=10.4.0",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
pydedup = "pydedup.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py38"
